--- a/CSS/stiloalex.css
+++ b/CSS/stiloalex.css
@@ -20,6 +20,14 @@ body {
     font-size: 32px;
     margin-bottom: 10px;
   }
+
+  img  {
+    width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      object-fit: cover;
+      float: right;
+    }  
   
   p {
     font-size: 18px;
